# elektro

./: .gitignore  LICENSE  README.md  pyproject.toml
elektro/: __init__.py  __main__.py  cli.py
elektro/modules/: basic.py  datasheet.py  digital.py  filters.py  resistor.py  rf.py  utils.py
