[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elektro"
version = "0.1.0"
description = "Terminal tabanli Elektrik-Elektronik Muhendisligi araci"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ahmet Enes KAYMAK", email = "kaymakahmetenes@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Utilities",
]
keywords = ["electronics", "engineering", "cli", "terminal", "rf", "circuit"]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.urls]
Homepage = "https://github.com/0anes0/elektro"
Repository = "https://github.com/0anes0/elektro"

[project.scripts]
elektro = "elektro.cli:app"
